--- a/meta/vufind/themes/meta-bootstrap3/scss/_page-topics-home.scss
+++ b/meta/vufind/themes/meta-bootstrap3/scss/_page-topics-home.scss
@@ -71,6 +71,12 @@
       }
       &:last-child {
         padding-right: 0;
+        @media (max-width: $device-md-max-width) {
+          margin-top: 20px;
+        }
+      }
+      @media (max-width: $device-md-max-width) {
+        padding: 0;
       }
     }
     li {
